# amos2021ws07-nft-development

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  upgrade.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cypress_integration_component_tests.yml  eslint.yml  python_backend_lint.yml  python_backend_test.yml  run_integration_tests.yml
Documentation/: README.md  amos.postman_collection.json  build.md  build.tex  design.md  design.tex  review_guidelines.md  user.md  user.tex
Documentation/API/: nft_the_world.yml
assets/: README.md  nft-studio.fig  revised_output.csv  revised_output.json
backend/: .env  .env.sample  .gitignore  pyproject.toml  readme.md
backend/alembic/: env.py
backend/app/: initial_data.py  main.py
backend/appwrite-config/: docker-compose.yml
backend/configuration/: README.md  config_template.xlsx  configure_appwrite.py
backend/cronjob-docker/: .env  Dockerfile  README.md  blockchain_crawler.py  requirements.txt
blockchain/: .secrets.json  README.md  package-lock.json  package.json  truffle-config.js
development/: docker-compose.yml
frontend/: .env  .eslintrc.js  .gitignore  Dockerfile  README.md  cypress.json  cypress_system_tests.json  package-lock.json  package.json
production/: docker-compose.yml
testing/fake_data/: .gitignore  README.md  create_db_and_add_users.py  gen_user_pass_salt_hash.py  pyproject.toml
testing/fake_data/fake_data/: 1k_fake_user_with_true_salt_and_hash.csv  1k_users_amos.csv
testing/fake_data/queries/: init_db_amos.sql  queries.sql
(+236 files in other folders)
